# workshop-huggingface

./: .gitignore  README.md  app.py  llm_cafeteria.ipynb  pyproject.toml
models/: __init__.py
notebook_final/: cafeteria.json  llm_cafeteria.ipynb
rag/: __init__.py  ingest.py  pipeline.py  retriever.py
tests/: __init__.py
