[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-huggingface-rag"
version = "0.1.0"
description = "RAG assistant for GDG UAM workshop"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "GDG UAM"}]
keywords = ["rag", "huggingface", "gdg", "workshop"]
dependencies = [
    "datasets>=2.16",
    "pypdf>=4.0",
    "scikit-learn>=1.3",
]

[tool.setuptools]
packages = ["rag", "models"]
